Fix:alignment issue in the welcome message.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,15 +10,6 @@ body {
     background-color: #EFE1D1;
 }
 
-/* headings, paragraph */
-
-h1,
-h2,
-h3 {
-    font-family: 'Quicksand', sans-serif;
-    color: #331D2C;
-}
-
 p {
     font-family: 'Barlow', sans-serif;
 }
@@ -45,6 +36,7 @@ hr {
     overflow: hidden;
     width: 100%;
     top: 0;
+    height: auto;
 }
 
 .navigation li {
@@ -72,55 +64,75 @@ hr {
 }
 
 /*-------------------------------------------------------------------  section home */
-#main {
-    height: auto;
-    /* padding: 1rem; */
-    /* margin-bottom: 40px; */
-    padding: 16px;
-    margin-top: 60px;
+.home-section {
+    height: 600px;
+    /* padding: 1rem;
+    margin-bottom: 40px;
+    padding: 16px 0;
+    margin-top: 60px; */
 }
 
 #profile-img {
     width: auto;
-    height: 600px;
+    /* height: 600; */
     opacity: .7;
     float: left;
+    /* margin: 2%; */
+    padding-top: 70px;
 }
 
-/* #welcome {
-    padding-left: 450px;
-    padding-top: 150px;
-} */
+#welcome {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 #welcome p {
     font-family: 'Patrick Hand',
         'Courier New';
     color: #A78295;
-    text-align: center;
     font-size: xx-large;
     letter-spacing: 2px;
-    /* margin: 0;
-    padding: 0;
-    border: none; */
+    text-align: center;
 }
 
-/* #main #welcome {
-    float: left;
-} */
+.one-third-width-column {
+    width: 33.33%;
+    /* display: inline-block; */
+}
+
+.two-thirds-width-column {
+    width: 66.66%;
+    display: inline;
+}
+
+.vertical-center {
+    position: relative;
+    top: 100%;
+}
 
 /*-------------------------------------------------------------------  section experience */
-#experience {
+.experience-section {
     padding: 1rem;
     margin-bottom: 40px;
     background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
+    margin-top: 60px;
 }
 
-#experience h1 {
+.experience-section h1,
+h2,
+h3 {
+    font-family: 'Quicksand', sans-serif;
+    color: #331D2C;
+}
+
+.experience-section h1 {
     text-transform: uppercase;
     letter-spacing: 6px;
     text-align: center;
     font-size: xx-large;
     padding-bottom: 20px;
+
 }
 
 .inside {
@@ -131,7 +143,6 @@ hr {
 .inner-box {
     width: 90%;
     margin: 1rem 0;
-    /* display: inline-block; */
     padding-left: 30px;
     padding-right: 20px;
     padding-bottom: 10px;
@@ -163,14 +174,21 @@ section {
 }
 
 /*-------------------------------------------------------------------  education section */
-#education {
+.education-section {
     padding: 1rem;
     margin-bottom: 40px;
     display: grid;
     place-items: center;
 }
 
-#education h1 {
+.education-section h1,
+h2,
+h3 {
+    font-family: 'Quicksand', sans-serif;
+    color: #331D2C;
+}
+
+.education-section h1 {
     text-transform: uppercase;
     letter-spacing: 6px;
     text-align: center;
@@ -181,8 +199,8 @@ section {
 
 .education-box {
     width: 600px;
-    border: 3px solid #DE3163;
-    box-shadow: 9px 6px 4px #5B2C6F;
+    border: 3px solid #331D2C;
+    box-shadow: 9px 6px 4px #A78295;
     padding: 7px 11px;
     background-image: linear-gradient(150deg, #EAFAF1, #E8DAEF 30%, #E5E8E8);
     margin: 10px;
@@ -202,13 +220,20 @@ ul strong {
 
 
 /*-------------------------------------------------------------------  skills section */
-#skills {
+.skills-section {
     padding: 1rem;
     margin-bottom: 40px;
     background: url('../images/bokeh-2072271_1920.jpg') center center / cover no-repeat fixed;
 }
 
-#skills h1 {
+.skills-section h1,
+h2,
+h3 {
+    font-family: 'Quicksand', sans-serif;
+    color: #331D2C;
+}
+
+.skills-section h1 {
     text-transform: uppercase;
     letter-spacing: 6px;
     text-align: center;
@@ -217,19 +242,14 @@ ul strong {
     padding-bottom: 20px;
 }
 
-#skills h2 {
+.skills-section h2 {
     letter-spacing: 4px;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 5px;
-}
-
-.language ul {
-    list-style-type: none;
     padding-left: 20px;
 }
 
-.expertise {
+#expertise {
     background: rgba(194, 132, 140, .6);
     width: 100%;
     padding: 5px;
@@ -248,6 +268,11 @@ ul strong {
     vertical-align: middle;
 }
 
+#language ul {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
 /* tech and human language */
 /* Create two equal columns that floats next to each other */
 .column {
@@ -258,7 +283,7 @@ ul strong {
 }
 
 /* Clear floats after the columns */
-.language:after {
+#language:after {
     content: "";
     display: table;
     clear: both;
@@ -291,7 +316,6 @@ ul strong {
 .human-language-tools-box {
     margin-top: 20px;
     background: rgba(194, 132, 140, .6);
-    /* padding: 20px; */
     width: 100%;
     text-align: left;
     display: block;
@@ -302,7 +326,6 @@ ul strong {
 .tech-languages {
     margin-top: 20px;
     background: rgba(194, 132, 140, .6);
-    /* padding: 20px; */
     width: 100%;
     text-align: left;
     display: block;
@@ -310,7 +333,8 @@ ul strong {
 }
 
 .wrapper {
-    width: 500px;
+    width: auto;
+    padding: 20px;
 }
 
 .progress-bar {
@@ -326,7 +350,6 @@ ul strong {
     height: 22px;
     background-color: #3F2E3E;
     border-radius: 3px;
-
     transition: width 500ms ease-in-out;
 }
 
@@ -336,7 +359,14 @@ ul strong {
 
 
 /*-------------------------------------------------------------------  contact me section */
-#contact {
+.contact-section h1,
+h2,
+h3 {
+    font-family: 'Quicksand', sans-serif;
+    color: #331D2C;
+}
+
+.contact-section {
     padding: 1rem;
     margin-bottom: 40px;
 
@@ -344,12 +374,11 @@ ul strong {
     background-color: #AC8499;
     background-size: cover;
     background-position: center;
-    height: 600px;
-    /* margin-bottom: 5%; */
-    box-sizing: border-box;
+    height: auto;
+    width: 100%;
 }
 
-#contact h1 {
+.contact-section h1 {
     text-transform: uppercase;
     letter-spacing: 6px;
     text-align: center;
@@ -360,32 +389,30 @@ ul strong {
 
 .contact-me {
     display: flex;
+    width: auto;
 }
 
 /* Create two equal columns that sits next to each other */
 .contact-column {
-    flex: 50%;
+    float: left;
+    width: 50%;
     padding: 10px;
-    height: auto;
+    box-sizing: border-box;
 }
 
 .contact-form {
     color: #EDC9D2;
     background-color: #331D2C;
     opacity: .5;
-    width: 400px;
-    position: absolute;
-    padding: 10px;
+    width: 90%;
+    padding: 14px;
 }
 
 #fname,
 #lname,
-#email {
+#email,
+#message {
     width: 100%;
-}
-
-.send-button {
-    display: block;
 }
 
 .send-button:hover {
@@ -415,15 +442,32 @@ input[type=reset] {
     border-radius: 5px;
     font-size: 100%;
     font-weight: bold;
+    float: right;
+}
+
+input[type=submit],
+input[type=reset] {
+    display: inline-block;
 }
 
 #profile-image {
-    max-width: 30px;
+    width: 50px;
     height: auto;
+    margin-bottom: 10px;
+}
+
+#personal-information h3 {
+    font-size: medium;
+}
+
+#personal-information h2 {
+    font-size: x-large;
+    text-transform: uppercase;
 }
 
 .social-networks {
     text-align: left;
+    padding: 0;
 }
 
 .social-networks>li {
@@ -432,7 +476,6 @@ input[type=reset] {
 
 .social-networks i {
     font-size: 160%;
-    /* margin: 1%; */
     padding: 1%;
     color: #3F2E3E;
 }
